example/lib/src/arbs/errors/app_zh_HK.arb
{
  "@@locale": "zh_HK",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "發生咗錯誤",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "發生咗意外嘅錯誤",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "錯誤報告已成功發送.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}